fix (HSK-456) make sure that select chevron is visible

--- a/source/_patterns/01-molecules/04-forms/00-fields.scss
+++ b/source/_patterns/01-molecules/04-forms/00-fields.scss
@@ -17,6 +17,7 @@
         border-left: 1px solid $colorBorder;
         pointer-events: none;
         position: absolute;
+        z-index: 1;
       }
     }
   }
